--- a/prometheus-metric-storage/Cargo.toml
+++ b/prometheus-metric-storage/Cargo.toml
@@ -1,10 +1,16 @@
 [package]
 name = "prometheus-metric-storage"
 version = "0.1.0"
+authors = ["Tamika Nomara <taminomara@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT"
+repository = "https://github.com/taminomara/prometheus-metric-storage"
+homepage = "https://github.com/taminomara/prometheus-metric-storage"
+documentation = "https://docs.rs/prometheus-metric-storage"
+description = """
+Derive macro to instantiate prometheus metrics with ease
+"""
 
 [dependencies]
 prometheus = "0.12"
-prometheus-metric-storage-derive =  { path = "../prometheus-metric-storage-derive" }
+prometheus-metric-storage-derive = { version = "0.1.0", path = "../prometheus-metric-storage-derive" }
